// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostPreview /> renders correctly with categories 1`] = `
<div
  className="postPreview"
>
  <Link
    className="imageLink"
    replace={false}
    to="/post/slug"
  >
    <img
      alt="title"
      className="image"
    />
    <div
      className="category"
      key="categoryName1"
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#000000",
          "marginTop": "-2em",
        }
      }
    >
      categoryName1
    </div>
    <div
      className="category"
      key="categoryName1"
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#000000",
          "marginTop": "-4em",
        }
      }
    >
      categoryName1
    </div>
  </Link>
  <Link
    className="titleLink"
    replace={false}
    to="/post/slug"
  >
    <h2
      className="title"
    >
      title
    </h2>
  </Link>
  <p
    className="lead"
  >
    Lead
  </p>
</div>
`;

exports[`<PostPreview /> renders correctly without categories 1`] = `
<div
  className="postPreview"
>
  <Link
    className="imageLink"
    replace={false}
    to="/post/slug"
  >
    <img
      alt="title"
      className="image"
    />
  </Link>
  <Link
    className="titleLink"
    replace={false}
    to="/post/slug"
  >
    <h2
      className="title"
    >
      title
    </h2>
  </Link>
  <p
    className="lead"
  >
    Lead
  </p>
</div>
`;
